--- a/_blog/2017-02-05-deepfakes.adoc
+++ b/_blog/2017-02-05-deepfakes.adoc
@@ -1,6 +1,6 @@
 = Deepfakes
 Marcus Crane <marcus@utf9k.net>
-v1.0, 2017-05-02
+v1.1, 2017-05-02
 :page-permalink: /blog/deepfakes
 :page-tags: [technology, future, deepfakes]
 :toc: preamble
@@ -8,11 +8,13 @@ v1.0, 2017-05-02
 
 I dug this post up from an older version of my site. It was written two years ago during the emergence of deepfakes. Any mention of machine learning may not be accurate but I've left them as is. In all likehood, I would know less now then I did back then when I had much more time to follow ML trends.
 
+I've made some slight rewordings, fixed typos and revived any links I could using the https://web.archive.org/[Wayback Machine] but otherwise, the post is 99% intact from when I first wrote it. I didn't realise just how much I had written about this at the time. I'm kind of glad since this was before the subreddit was banned. A lot of it is now lost to time.
+
 == An overview
 
 Just under 2 weeks ago, an article from The Verge titled https://www.theverge.com/2018/1/24/16929148/fake-celebrity-porn-ai-deepfake-face-swapping-artificial-intelligence-reddit[Fake celebrity porn is blowing up on Reddit, thanks to artificial intelligence] was posted on https://news.ycombinator.com/item?id=16226495[Hacker News]. If you'd just glimpsed the headline, you might assume it's a bunch of shitstirrers up to no good with Photoshop but unfortunately, it's arguably worse.
 
-In the past, the emergent field of machine learning had been mainly kept within the realm of computer science due to its inherent complexity. As time marches on, new tools and libraries have popped up that make machine learning easier than ever to dive into for professionals and hobbyists alike. It was only a matter of time before someone decided to apply it subjects considered taboo, and now we can see the results with this new crop of "fake" pornography. Now, I say "fake" to point out that this pornography isn't real but with results often being indistinguishable from reality itself, it kinda renders the term "fake" well... pointless.
+In the past, machine learning had been mainly kept within the realm of computer science due to its inherent complexity. As time marches on, new tools and libraries have popped up that make machine learning easier than ever to dive into for professionals and hobbyists alike. It was only a matter of time before someone decided to apply it to subjects considered taboo, and now we can see the results with a new crop of "fake" pornography. Now, I say "fake" to point out that this pornography isn't real but with results often being indistinguishable from reality itself, it kinda renders the term "fake" well... pointless.
 
 I felt like the downsides were glaringly obvious at first but after discussing this topic with a few non-technical coworkers, they seemed to have missed the forest for the trees. Their responses typically focused on the "cool tech" and "sweet custom porn" rather than realising that perhaps this is *the* Pandora's box which we can't go back from.
 
@@ -24,19 +26,19 @@ https://www.reddit.com/user/deepfakes[deepfakes] is the name of a user on reddit
 
 == What is machine learning?
 
-While the term "machine learning" might invoke visions of https://en.wikipedia.org/wiki/Skynet_(Terminator)[Skynet], it's worth noting that said machines aren't truly conscious in the way that you or I are. You'd think self-awareness and thus consciousness would be essential to learning, right? At its simplest, learning requires little much more than a series of inputs (sound, sight, touch) which we then process in order to produce an output. When you first meet someone, you may forget their face but over time, you learn to recognise them as memories form. As time progresses, you can also identify them in different contexts such as an office, an airport or at a beach. In a rough sense, you've trained your brain to subconsciously identify their facial features so that it can recall which memories they've appeared in before.
+While the term "machine learning" might invoke visions of https://en.wikipedia.org/wiki/Skynet_(Terminator)[Skynet], it's worth noting that said machines aren't truly conscious like us humans. You'd think the ability to be self-aware and/or concious would be essential to learning, right? At its simplest, learning requires little more than a series of inputs (sound, sight, touch) which we then process in order to produce an output. When you first meet someone, you may forget their face but over time, you learn to recognise them as memories form. As time progresses, you can also identify them in different contexts such as an office, an airport or at a beach. In a rough sense, you've trained your brain to subconsciously identify their facial features so that it can recall which memories they've appeared in before.
 
-Another crucial part of learning is the ability to weigh up how confident we are in our judgements. If we aren't confident enough in a decision, we'll opt either to do nothing or pursue an alternative choice. For instance, each time you meet a friend, your brain is thinking "Ah, I'm 99% sure that's my friend Sarah". On the flipside, I'm short sighted but silly enough to not wear my glasses. Because of that, I might recognise the general facial features of someone across the street but without moving closer, I don't have enough visual information to be sure. My own brain is thinking "I'm only 40% confident that's Pat" and decides to not call it a match.
+Another crucial part of learning is the ability to weigh up how confident we are in our judgements. If we aren't confident enough in a decision, we'll opt either to do nothing or pursue an alternative choice. For instance, each time you meet a friend, your brain is thinking "Ah, I'm 99% sure that's my friend Sarah". On the flipside, I'm short sighted but silly enough to not wear my glasses. Because of that, I might recognise the general facial features of someone across the street but without moving closer, I don't have enough visual information to be sure. My own brain is thinking "I'm only 40% confident that's Pat" and decides to not call it a definite match.
 
-It's a bit hand wavy but in essence, those are the two important elements. A machine learns by being fed data continuously and having its output judged. A facial detection network may be trained on photos of a single person, just like in our memory analogy, and then asked to identify if they are present in a handful of photos. It would respond Yes or No along with its level of confidence which can be checked against the actual answer. Those results are then fed back into the machine and it continues to improve itself as time goes on. The next step of such an example might be continuously seeing if wanted criminals appear in live CCTV footage of an airport.
+It's a bit hand wavy but in essence, those are the two important elements. A machine "learns" by being fed data continuously and having its output judged. A facial detection network may be trained on photos of a single person, just like in our memory analogy, and then asked to identify if they are present in a handful of photos. It would respond Yes or No along with its level of confidence which can be checked against the actual answer. Those results are then fed back into the machine and it continues to improve itself as time goes on. The next training step of such an example might be continuously seeing if wanted criminals appear in live CCTV footage of an airport.
 
-== So how does deepfakes work?
+== So how do deepfakes work?
 
-How does this all relate to deepfakes? Well, it's a type of neural network. A what now, you say? It's essentially what I just described which is a network that takes an output, does some unknown (hidden) calculations in the middle and returns an output. There's many different networks with different amounts of inputs and outputs but for the case of deepfakes, we're only dealing with one of each. There's a https://www.reddit.com/r/deepfakes/comments/7pgcg4/detailed_explanation_of_the_algorithm/[breakdown] of how it functions but I felt it wasn't detailed enough for the casual observer.
+How does this all relate to deepfakes? Well, it's a type of neural network. A what now, you say? It's essentially what I just described, which is a network that takes an output, does some unknown (hidden) calculations in the middle and returns an output. There are many different networks, with different numbers of inputs and outputs but in the case of deepfakes, we're only dealing with one of each. There's a https://web.archive.org/web/20180206231055/https://www.reddit.com/r/deepfakes/comments/7pgcg4/detailed_explanation_of_the_algorithm/[breakdown] of how it functions but I felt it wasn't detailed enough for the casual observer.
 
 Similar to our facial detection example from just before, deepfakes uses two https://en.wikipedia.org/wiki/Autoencoder[autoencoder] networks. One is trained on numerous photos of a celebrity while the other is trained on numerous photos of a "porn star" or performer which is the term I'll be using. The photos first are cropped so that only faces are displayed. Those faces are then fed into the networks as inputs. Image of the celebrity go into Network A and photos of the performer go into Network B. You may like to read through https://hackernoon.com/autoencoders-deep-learning-bits-1-11731e200694[this] article too in order to get a better idea of autoencoders.
 
-I struggled to understand the next step for quite some time as any mention of it was quite vague however https://arxiv.org/pdf/1706.02932v2.pdf[this] paper, mentioned by deepfakes https://www.reddit.com/r/deepfakes/comments/7jqvny/release_face_swap_model_tool/dreu4rl/[here] as his inspiration seems to shed some light. The rough version seems to be that the input faces are encoded into a compressed representation. The image below helps to illustrate this.
+I struggled to understand the next step for quite some time as any mention of it was quite vague however https://arxiv.org/pdf/1706.02932v2.pdf[this] paper, mentioned by deepfakes https://www.reddit.com/r/deepfakes/comments/7jqvny/release_face_swap_model_tool/dreu4rl/[here (dead link)] as his inspiration seems to shed some light. The rough version seems to be that the input faces are encoded into a compressed representation. The image below helps to illustrate this.
 
 .Celebrities that have been fed into an autoencoder
 image::celebs.png[Celebrities fed into an autoencoder, 500]
@@ -46,7 +48,7 @@ This isn't an accurate depiction of how deepfakes goes about its encoding but ra
 .Cats that have been fed into an autoencoder
 image::cats.png[Cats fed into an autoencoder, 500]
 
-Similarly, here is another example with cats. Despite the large variation in not only colour, but directions that they are looking, they also all map more or less equally into a spherical structure. For a computer, this isn't a useful visualisation so instead these representations will all just be stored as data points. https://www.reddit.com/r/deepfakes/comments/7pgcg4/detailed_explanation_of_the_algorithm/dshkv3o/[One explanation] suggests that eg; a right eyebrow might be interpreted as "a line from X to Y" for one celebrity while another may see the right eyebrow as "a curve [...] along points W, X, Y and Z". One of the biggest annoyances with networks is that it can be quite confusing to understand how they're working and sometimes even https://www.reddit.com/r/deepfakes/comments/7jqvny/release_face_swap_model_tool/dra7ayi/[their own creators] have no idea why decisions are being made.
+Similarly, here is another example with cats. Despite the large variation in not only colour, but directions that they are looking, they also all map more or less equally into a spherical structure. For a computer, this isn't a useful visualisation so instead these representations will all just be stored as data points. https://www.reddit.com/r/deepfakes/comments/7pgcg4/detailed_explanation_of_the_algorithm/dshkv3o/[One explanation (dead link)] suggests that eg; a right eyebrow might be interpreted as "a line from X to Y" for one celebrity while another may see the right eyebrow as "a curve [...] along points W, X, Y and Z". One of the biggest annoyances with networks is that it can be quite confusing to understand how they're working and sometimes even https://www.reddit.com/r/deepfakes/comments/7jqvny/release_face_swap_model_tool/dra7ayi/[their own creators (dead link)] have no idea why decisions are being made.
 
 So what happens with this representation? It actually just recreates the original image from the best of its ability. It won't always be accurate to start with but over the course of many hours training its internal model, both networks begin to reliably decode the representations back into their respective faces. As more training iterations are performs, the netowrk is exposed to different lighting conditions, facial expressions and so on. An error function measures the resulting image against the original so that it can continue to try different variations on decoding in the pursuit of accuracy. Do note too that the networks share the same facial encoder while each has a uniquely trained facial decoder.
 
@@ -56,7 +58,7 @@ Without much in the way of deeply detailed explanations to go on, this is my bes
 
 <Original link was https://www.pornhub.com/embed/ph5a27755783e28 but it has since died. The video was a pornstar with Gal Godot's face. Not really her face but overlaid on the body of someone else. The scary thing is you couldn't easily distinguish that it wasn't fake!>
 
-I chose the clip above because it provides a good indication of what works but also what can go wrong. There's a number of instances where the result is miserable, such as 1:09 where multiple facial expressions flash one after the other. Often times, the edges of the overlaid face can clearly be seen, giving an idea of which elements have been replaced. All in all though, the result can be frighteningly accurate, just with the small amount of code that the creator referred to as https://www.reddit.com/r/deepfakes/comments/7jqvny/release_face_swap_model_tool/dr8hk8e/["embarassingly simple"].
+I chose the clip above because it provides a good indication of what works but also what can go wrong. There's a number of instances where the result is miserable, such as 1:09 where multiple facial expressions flash one after the other. Often times, the edges of the overlaid face can clearly be seen, giving an idea of which elements have been replaced. All in all though, the result can be frighteningly accurate, just with the small amount of code that the creator referred to as https://www.reddit.com/r/deepfakes/comments/7jqvny/release_face_swap_model_tool/dr8hk8e/["embarassingly simple" (dead link)].
 
 == Is this bad?
 
@@ -68,7 +70,7 @@ Anyway, there's no point preaching to the choir on this. Those who get off on th
 
 == What next?
 
-While it's easy to think one man has started this all, he does https://www.reddit.com/r/deepfakes/comments/7jqvny/release_face_swap_model_tool/drbv6io/[have a point] in that this really was inevitable. There are other projects that are more concerning, not for where they could lead, but for what they can do right now. 
+While it's easy to think one man has started this all, he does https://www.reddit.com/r/deepfakes/comments/7jqvny/release_face_swap_model_tool/drbv6io/[have a point (dead link)] in that this really was inevitable. There are other projects that are more concerning, not for where they could lead, but for what they can do right now. 
 
 This post has already gone on long enough so here's a few proof of concepts off the top of my head that give an indication of where we're headed:
 
