--- a/_blog/2017-02-05-deepfakes.adoc
+++ b/_blog/2017-02-05-deepfakes.adoc
@@ -36,35 +36,35 @@ It's a bit hand wavy but in essence, those are the two important elements. A mac
 
 How does this all relate to deepfakes? Well, it's a type of neural network. A what now, you say? It's essentially what I just described, which is a network that takes an output, does some unknown (hidden) calculations in the middle and returns an output. There are many different networks, with different numbers of inputs and outputs but in the case of deepfakes, we're only dealing with one of each. There's a https://web.archive.org/web/20180206231055/https://www.reddit.com/r/deepfakes/comments/7pgcg4/detailed_explanation_of_the_algorithm/[breakdown] of how it functions but I felt it wasn't detailed enough for the casual observer.
 
-Similar to our facial detection example from just before, deepfakes uses two https://en.wikipedia.org/wiki/Autoencoder[autoencoder] networks. One is trained on numerous photos of a celebrity while the other is trained on numerous photos of a "porn star" or performer which is the term I'll be using. The photos first are cropped so that only faces are displayed. Those faces are then fed into the networks as inputs. Image of the celebrity go into Network A and photos of the performer go into Network B. You may like to read through https://hackernoon.com/autoencoders-deep-learning-bits-1-11731e200694[this] article too in order to get a better idea of autoencoders.
+Similar to our facial detection example from just before, deepfakes uses two https://en.wikipedia.org/wiki/Autoencoder[autoencoder] networks. One is trained on numerous photos of a celebrity while the other is trained on numerous photos of a "porn star" or performer which is the term I'll be using. The photos first are cropped so that only faces are displayed. Those faces are then fed into the networks as inputs. Photos of the celebrity go into Network A and photos of the performer go into Network B. You may like to read through https://hackernoon.com/autoencoders-deep-learning-bits-1-11731e200694[this] article too, in order to get a better idea of autoencoders.
 
-I struggled to understand the next step for quite some time as any mention of it was quite vague however https://arxiv.org/pdf/1706.02932v2.pdf[this] paper, mentioned by deepfakes https://www.reddit.com/r/deepfakes/comments/7jqvny/release_face_swap_model_tool/dreu4rl/[here (dead link)] as his inspiration seems to shed some light. The rough version seems to be that the input faces are encoded into a compressed representation. The image below helps to illustrate this.
+I struggled to understand the next step for quite some time as any mention of it was quite vague, however https://arxiv.org/pdf/1706.02932v2.pdf[this] paper, mentioned by deepfakes https://www.reddit.com/r/deepfakes/comments/7jqvny/release_face_swap_model_tool/dreu4rl/[here (dead link)] as his inspiration seems to shed some light. The rough version seems to be that the input faces are encoded into a compressed representation. The image below helps to illustrate this.
 
 .Celebrities that have been fed into an autoencoder
 image::celebs.png[Celebrities fed into an autoencoder, 500]
 
-This isn't an accurate depiction of how deepfakes goes about its encoding but rather a useful mental model to understand how a representation may look. Note how despite the celebrities above being different shapes and sizes, they can all be deconstructed into a spherical texture with eyes, nose and mouth roughly in the same positions.
+This isn't an accurate depiction of how deepfakes goes about its encoding, but serves as a useful mental model to understand how a representation may look. Notice how despite the celebrities above being different shapes and sizes, they can all be deconstructed into a spherical texture with eyes, nose and mouth roughly in the same positions.
 
 .Cats that have been fed into an autoencoder
 image::cats.png[Cats fed into an autoencoder, 500]
 
-Similarly, here is another example with cats. Despite the large variation in not only colour, but directions that they are looking, they also all map more or less equally into a spherical structure. For a computer, this isn't a useful visualisation so instead these representations will all just be stored as data points. https://www.reddit.com/r/deepfakes/comments/7pgcg4/detailed_explanation_of_the_algorithm/dshkv3o/[One explanation (dead link)] suggests that eg; a right eyebrow might be interpreted as "a line from X to Y" for one celebrity while another may see the right eyebrow as "a curve [...] along points W, X, Y and Z". One of the biggest annoyances with networks is that it can be quite confusing to understand how they're working and sometimes even https://www.reddit.com/r/deepfakes/comments/7jqvny/release_face_swap_model_tool/dra7ayi/[their own creators (dead link)] have no idea why decisions are being made.
+Similarly, here is another example with cats. Despite the large variation in not only fur colour, but even the directions they're facing, they all map fairly equally into a spherical structure. For a computer, this isn't a useful visualisation so instead these representations will all just be stored as data points. https://www.reddit.com/r/deepfakes/comments/7pgcg4/detailed_explanation_of_the_algorithm/dshkv3o/[One explanation (dead link)] suggests that eg; a right eyebrow might be interpreted as "a line from X to Y" for one celebrity while another may see the right eyebrow as "a curve [...] along points W, X, Y and Z". One of the biggest annoyances with networks is that it can be quite confusing to understand how they're working and sometimes even https://www.reddit.com/r/deepfakes/comments/7jqvny/release_face_swap_model_tool/dra7ayi/[their own creators (dead link)] have no idea why decisions are being made.
 
-So what happens with this representation? It actually just recreates the original image from the best of its ability. It won't always be accurate to start with but over the course of many hours training its internal model, both networks begin to reliably decode the representations back into their respective faces. As more training iterations are performs, the netowrk is exposed to different lighting conditions, facial expressions and so on. An error function measures the resulting image against the original so that it can continue to try different variations on decoding in the pursuit of accuracy. Do note too that the networks share the same facial encoder while each has a uniquely trained facial decoder.
+So what happens with this representation? It actually just recreates the original image to the best of its ability. It won't always be accurate to start with but over the course of many hours training its internal model, both networks begin to reliably decode the representations back into their respective faces. As more training iterations are performs, the network is exposed to different lighting conditions, facial expressions and so on. An error function measures the resulting image against the original so that it can continue to try different decoding variation, in the pursuit of accuracy. Do note too that the networks share the same facial encoder while each has a uniquely trained facial decoder.
 
-Once the user has determined that both models are sufficiently trained, the network is fed a video, which is little more than a series of images. Each frame is cropped to just the face and fed into the network of the performer. As the encoders are shared, it's able to build an intermediate representation of any general face. The trick this time is that the decoders are switched midway. Since the celebrity decoder is uniquely trained, it can't help but reconstruct the representation into the face of the celebrity while still inheriting the details (expression, facial structure) of the performer. The result is that the performers face is morphed to look exactly like that of the celebrity.
+Once the user has determined that both models are sufficiently trained, the network is fed a video. Don't forget that videos are little more than a series of images. Each frame is cropped to just the face and fed into the network of the performer. As the encoders are shared, it's able to build an intermediate representation of any general face. The trick this time is that the decoders are switched midway. Since the celebrity decoder is uniquely trained, it can't help but reconstruct the representation into the face of the celebrity while still inheriting the details (expression, facial structure) of the performer. The result is that the performers face is morphed to look exactly like that of the celebrity.
 
-Without much in the way of deeply detailed explanations to go on, this is my best attempt however I can't speak much on the final conversation process. To illustrate the result, here is the original Gal Godot conversation post by deepfakes himself. *As indicated earlier, the following is pornography and is definitely not safe for work*.
+Without much in the way of deeply detailed explanations to go on, this is my best attempt however I can't speak much on the final conversation process. To illustrate the result, here is the original https://en.wikipedia.org/wiki/Gal_Gadot[Gal Gadot] conversion posted by deepfakes himself. *As indicated earlier, the following is pornography and is definitely not safe for work*.
 
-<Original link was https://www.pornhub.com/embed/ph5a27755783e28 but it has since died. The video was a pornstar with Gal Godot's face. Not really her face but overlaid on the body of someone else. The scary thing is you couldn't easily distinguish that it wasn't fake!>
+<Original link was https://www.pornhub.com/embed/ph5a27755783e28[https://www.pornhub.com/embed/ph5a27755783e28 (NSFW!!)] but it has since died. The video was a pornstar with Gal Godot's face. Not really her face but overlaid on the body of someone else. The scary thing is you couldn't easily distinguish that it wasn't fake!>
 
 I chose the clip above because it provides a good indication of what works but also what can go wrong. There's a number of instances where the result is miserable, such as 1:09 where multiple facial expressions flash one after the other. Often times, the edges of the overlaid face can clearly be seen, giving an idea of which elements have been replaced. All in all though, the result can be frighteningly accurate, just with the small amount of code that the creator referred to as https://www.reddit.com/r/deepfakes/comments/7jqvny/release_face_swap_model_tool/dr8hk8e/["embarassingly simple" (dead link)].
 
 == Is this bad?
 
-Well, that's really up to your own personal beliefs, isn't it? It would seem to be a moral issue at best, as technically it doesn't seem to be illegal. An interviewee in https://www.wired.com/story/face-swap-porn-legal-limbo/[this Wired story] sums it up as far as US law is concerned: "There are all sorts of First Amendment problems because it’s not their real body.". The assumption seems to be that any such creations could be considered art, not unlike a painting or a photoshop edit which is legally understandable but still feels a bit ethically shady.
+Well, that's really up to your own personal beliefs, isn't it? It would seem to be a moral issue at best, as technically it doesn't seem to be illegal. An interviewee in https://www.wired.com/story/face-swap-porn-legal-limbo/[this Wired story] sums it up as far as US law is concerned: "There are all sorts of First Amendment problems because it’s not their real body.". The assumption seems to be that any such creations could be considered art, not unlike a painting or a photoshop edit, which is legally understandable, but still feels a bit ethically shady.
 
-The obvious societal issue here is that it's presumably the next step in being able to objectify others? Rejected by your crush? Bust out the ol' https://facebook.com[Human Pokedex] and scrape enough data to generate your own virtual fantasy. They might object but that's ok, right? You're not actually there to respect their wishes, it's their body you're after and that's all :)
+The obvious societal issue here is that it's presumably the next step in being able to objectify others? Rejected by your crush? Bust out the ol' https://facebook.com[Human Pokedex] and scrape enough data to generate your own virtual fantasy. They might object but that's ok, right? You're not actually there to respect their wishes, it's their body you're after and that's all, right?
 
 Anyway, there's no point preaching to the choir on this. Those who get off on this stuff can easily justify it to themselves because "lol it's not actually them, its fake!!". I wouldn't be surprised if there's a teenager in awe right now who becomes the real life https://en.wikipedia.org/wiki/USS_Callister[Robert Daly].
 
