--- a/_blog/2017-02-05-deepfakes.adoc
+++ b/_blog/2017-02-05-deepfakes.adoc
@@ -56,7 +56,7 @@ Once the user has determined that both models are sufficiently trained, the netw
 
 Without much in the way of deeply detailed explanations to go on, this is my best attempt however I can't speak much on the final conversation process. To illustrate the result, here is the original https://en.wikipedia.org/wiki/Gal_Gadot[Gal Gadot] conversion posted by deepfakes himself. *As indicated earlier, the following is pornography and is definitely not safe for work*.
 
-<Original link was https://www.pornhub.com/embed/ph5a27755783e28[https://www.pornhub.com/embed/ph5a27755783e28 (NSFW!!)] but it has since died. The video was a pornstar with Gal Godot's face. Not really her face but overlaid on the body of someone else. The scary thing is you couldn't easily distinguish that it wasn't fake!>
+<Original link was https://www.pornhub.com/embed/ph5a27755783e28[https://www.pornhub.com/embed/ph5a27755783e28 (NSFW!!)] but it has since died. The video was a pornstar with Gal Gadot's face. Not really her face but overlaid on the body of someone else. The scary thing is you couldn't easily distinguish that it wasn't fake!>
 
 I chose the clip above because it provides a good indication of what works but also what can go wrong. There's a number of instances where the result is miserable, such as 1:09 where multiple facial expressions flash one after the other. Often times, the edges of the overlaid face can clearly be seen, giving an idea of which elements have been replaced. All in all though, the result can be frighteningly accurate, just with the small amount of code that the creator referred to as https://www.reddit.com/r/deepfakes/comments/7jqvny/release_face_swap_model_tool/dr8hk8e/["embarassingly simple" (dead link)].
 
