--- a/_notes/books/seeing-like-a-state.adoc
+++ b/_notes/books/seeing-like-a-state.adoc
@@ -1,5 +1,6 @@
 = Seeing Like a State
 Marcus Crane <marcus@utf9k.net>
+:page-permalink: /notes/books/seeing-like-a-state
 :emoji: 📭
 :nofooter:
 :toc: preamble
