--- a/_notes/books/the-phoenix-project.adoc
+++ b/_notes/books/the-phoenix-project.adoc
@@ -1,5 +1,6 @@
 = The Phoenix Project
 Marcus Crane <marcus@utf9k.net>
+:page-permalink: /notes/books/the-phoenix-project
 :emoji: 📈
 :nofooter:
 :toc:
