Started moving files around

--- a/blog/_posts/email-lookup.adoc
+++ b/blog/_posts/email-lookup.adoc
@@ -1,9 +1,11 @@
 = Doubling checking if an email address exists
 Marcus Crane <marcus@utf9k.net>
 v1.0, 2019-07-26
+:revdate: 2019-01-01
+:page-layout: post
 :page-permalink: /blog/email-lookup
-:source-highlighter: rouge
 :page-tags: [email, tip, telnet, nslookup]
+:source-highlighter: rouge
 :toc:
 
 Sometimes I'll want to email someone but I don't know if their email address is valid. Likewise, they might have verbally told it to you, but you can't remember if it has a dot or a dash! Luckily, there's a handy way to find out using a mix of nslookup and telnet.
