--- a/content/blog/2017-02-05-deepfakes.adoc
+++ b/content/blog/2017-02-05-deepfakes.adoc
@@ -1,10 +1,11 @@
 = Deepfakes
 Marcus Crane <marcus@utf9k.net>
 v1.1, 2017-05-02
+:imagesdir: /static/img/deepfakes
+:page-layout: post
 :page-permalink: /blog/deepfakes
 :page-tags: [technology, future, deepfakes]
 :toc: preamble
-:imagesdir: /static/img/deepfakes
 
 I dug this post up from an older version of my site. It was written two years ago during the emergence of deepfakes. Any mention of machine learning may not be accurate but I've left them as is. In all likehood, I would know less now then I did back then when I had much more time to follow ML trends.
 
