--- a/content/blog/2018-02-15-day-xero.adoc
+++ b/content/blog/2018-02-15-day-xero.adoc
@@ -1,6 +1,8 @@
 = Day Xero
 Marcus Crane <marcus@utf9k.net>
 v1.1, 2018-02-15
+:page-categories: [blog]
+:page-layout: post
 :page-permalink: /blog/day-xero
 :page-tags: [anxiety, work]
 
