--- a/content/blog/2018-02-28-lore-tabs.adoc
+++ b/content/blog/2018-02-28-lore-tabs.adoc
@@ -1,6 +1,8 @@
 = Humans don't come with lore tabs
 Marcus Crane <marcus@utf9k.net>
 v1.0, 2018-02-28
+:page-categories: [blog]
+:page-layout: post
 :page-permalink: /blog/lore-tabs
 :page-tags: [people]
 
