--- a/content/blog/2019-03-20-future-of-emergency-services.adoc
+++ b/content/blog/2019-03-20-future-of-emergency-services.adoc
@@ -1,6 +1,8 @@
 = What is the future of emergency services?
 Marcus Crane <marcus@utf9k.net>
 v1.0, 2019-03-20
+:page-categories: [blog]
+:page-layout: post
 :page-permalink: /blog/future-of-emergency-services
 :page-tags: [people, future]
 
