--- a/content/blog/2019-07-29-retrieving-jenkins-credentials.adoc
+++ b/content/blog/2019-07-29-retrieving-jenkins-credentials.adoc
@@ -1,9 +1,11 @@
 = Retrieving credentials from Jenkins
 Marcus Crane <marcus@utf9k.net>
 v1.0, 2019-07-29
+:imagesdir: /static/img/jenkins-credentials
+:page-categories: [blog]
+:page-layout: post
 :page-permalink: /blog/retrieving-jenkins-credentials
 :page-tags: [jenkins, security]
-:imagesdir: /static/img/jenkins-credentials
 
 Have you ever stored a password in Jenkins, only to forget later on what the value is? You might try logging it from inside an existing job, but you'll find that Jenkins goes out of its way to mask that value from you (and any potential attackers!)
 
