--- a/content/blog/2019-08-19-25.adoc
+++ b/content/blog/2019-08-19-25.adoc
@@ -1,6 +1,8 @@
 = 25
 Marcus Crane <marcus@utf9k.net>
-v1.0, 2019-08-19
+:page-categories: [blog]
+:page-date: 2019-08-19
+:page-layout: post
 :page-permalink: /blog/25
 :page-tags: [meta]
 
