--- a/index.adoc
+++ b/index.adoc
@@ -14,8 +14,10 @@ I'm around the web in a bunch of places: https://github.com/marcus-crane[github]
 == Blog
 
 ++++
-{% for post in site.blog reversed %}
+{% assign blog_posts = site.pages | where_exp: "item", "item.dir == '/blog/'" %}
+{% for post in blog_posts %}
 	<li>{{ post.date | date: "%d/%m/%Y" }} <a href="{{ post.url }}">{{ post.title }}</a></li>
+	{{ post.dir }}
 {% endfor %}
 ++++
 
