--- a/content/blog/arch-nuc-install.adoc
+++ b/content/blog/arch-nuc-install.adoc
@@ -1,6 +1,6 @@
 = Installing Arch Linux on my Intel NUC
 Marcus Crane <marcus@utf9k.net>
-v1.1, 2017-12-24
+:page-date: 2017-12-24
 :page-layout: post
 :page-permalink: /blog/arch-nuc-install
 :page-tags: [arch, linux]
