--- a/content/blog/automation-right.adoc
+++ b/content/blog/automation-right.adoc
@@ -1,8 +1,7 @@
 = When automation goes horribly right
 Marcus Crane <marcus@utf9k.net>
-v1.0, 2018-12-03
+:page-date: 2018-12-03
 :imagesdir: /static/img/automation-right
-:page-categories: [blog]
 :page-layout: post
 :page-permalink: /blog/automation-right
 :page-tags: [automation, microservices, twitter]
