--- a/content/blog/day-xero.adoc
+++ b/content/blog/day-xero.adoc
@@ -1,7 +1,6 @@
 = Day Xero
 Marcus Crane <marcus@utf9k.net>
-v1.1, 2018-02-15
-:page-categories: [blog]
+:page-date: 2018-02-15
 :page-layout: post
 :page-permalink: /blog/day-xero
 :page-tags: [anxiety, work]
