--- a/content/blog/email-lookup.adoc
+++ b/content/blog/email-lookup.adoc
@@ -1,7 +1,6 @@
 = Doubling checking if an email address exists
 Marcus Crane <marcus@utf9k.net>
-v1.0, 2019-07-26
-:revdate: 2019-01-01
+:page-date: 2019-09-26
 :page-layout: post
 :page-permalink: /blog/email-lookup
 :page-tags: [email, tip, telnet, nslookup]
