--- a/content/blog/future-of-emergency-services.adoc
+++ b/content/blog/future-of-emergency-services.adoc
@@ -1,7 +1,6 @@
 = What is the future of emergency services?
 Marcus Crane <marcus@utf9k.net>
-v1.0, 2019-03-20
-:page-categories: [blog]
+:page-date: 2019-03-20
 :page-layout: post
 :page-permalink: /blog/future-of-emergency-services
 :page-tags: [people, future]
