--- a/content/blog/lore-tabs.adoc
+++ b/content/blog/lore-tabs.adoc
@@ -1,7 +1,6 @@
 = Humans don't come with lore tabs
 Marcus Crane <marcus@utf9k.net>
-v1.0, 2018-02-28
-:page-categories: [blog]
+:page-date: 2018-02-28
 :page-layout: post
 :page-permalink: /blog/lore-tabs
 :page-tags: [people]
