--- a/content/blog/lost-python-results.adoc
+++ b/content/blog/lost-python-results.adoc
@@ -1,7 +1,6 @@
 = Recovering lost Python results in the REPL
 Marcus Crane <marcus@utf9k.net>
-v1.0, 2018-12-12
-:page-categories: [blog]
+:page-date: 2018-12-12
 :page-layout: post
 :page-permalink: /blog/lost-python-results
 :page-tags: [python, snippet]
