--- a/content/blog/nz-oia-guide.adoc
+++ b/content/blog/nz-oia-guide.adoc
@@ -1,7 +1,6 @@
 = A brief guide to OIAs in New Zealand
 Marcus Crane <marcus@utf9k.net>
-v1.1, 2018-08-18
-:page-categories: [blog]
+:page-date: 2018-08-18
 :page-layout: post
 :page-permalink: /blog/nz-oia-guide
 :page-tags: [government, nz, oia, guide]
