--- a/content/blog/retrieving-jenkins-credentials.adoc
+++ b/content/blog/retrieving-jenkins-credentials.adoc
@@ -1,8 +1,7 @@
 = Retrieving credentials from Jenkins
 Marcus Crane <marcus@utf9k.net>
-v1.0, 2019-07-29
+:page-date: 2019-07-29
 :imagesdir: /static/img/jenkins-credentials
-:page-categories: [blog]
 :page-layout: post
 :page-permalink: /blog/retrieving-jenkins-credentials
 :page-tags: [jenkins, security]
