--- a/content/projects/repo-birthdays.adoc
+++ b/content/projects/repo-birthdays.adoc
@@ -1,6 +1,7 @@
 = Repo Birthdays
 Marcus Crane <marcus@utf9k.net>
-v1.0, 2017-12-03
+:page-date: 2017-12-03
+:page-layout: post
 :page-permalink: /projects/repo-birthdays
 :page-tags: [chrome, extension, javascript]
 
