--- a/content/reviews/yakuza.adoc
+++ b/content/reviews/yakuza.adoc
@@ -1,6 +1,7 @@
 = Yakuza
 Marcus Crane <marcus@utf9k.net>
-v1.0, 2015-01-03
+:page-date: 2015-01-03
+:page-layout: post
 :page-permalink: /reviews/yakuza
 
 You're just in time as we're about to dive into Japan's criminal underworld. I
